--- a/templates/frontend/product-detail.html
+++ b/templates/frontend/product-detail.html
@@ -117,7 +117,7 @@
                         <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="right-box-contain">
                                 <h6 class="offer-top">30% Off</h6>
-                                <h2 class="name">Creamy Chocolate Cake</h2>
+                                <h2 class="name">{{product.name}}</h2>
                                 <div class="price-rating">
                                     <h3 class="theme-color price">$49.50 <del class="text-content">$58.46</del> <span
                                             class="offer theme-color">(8% off)</span></h3>
