--- a/templates/frontend/partials/rating_stars.html
+++ b/templates/frontend/partials/rating_stars.html
@@ -10,5 +10,5 @@
             <li><i data-feather="star"></i></li>
         {% endfor %}
     </ul>
-    <span>({{ rating }})</span>
+    <span>{{ total_reviews }} review{{ total_reviews|pluralize }}</span>
 </div>
