--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -256,7 +256,19 @@
                                                     <a href="{% url 'product-detail' tp.slug %}" class="text-title">
                                                         <h6 class="name">{{tp.name}}</h6>
                                                     </a>
-                                                    <h6 class="price theme-color">{{tp.price | naira }}</h6>
+
+                                                    <h6 class="price theme-color">
+                                                        {% if tp.percentage_discount %}
+                                                        <span class="theme-color">
+                                                            {{ tp.discounted_price | naira }}
+                                                        </span>
+                                                        <del>{{ tp.price | naira }}</del>
+                                                        {% else %}
+                                                        <span class="theme-color">
+                                                            {{ tp.price | naira }}
+                                                        </span>
+                                                        {% endif %}
+                                                    </h6>
                                                 </div>
                                             </div>
                                         </div>
@@ -301,9 +313,8 @@
                                         <a href="{% url 'product-detail' product.slug %}">
                                             <h5 class="name">{{product.name}}</h5>
                                         </a>
-                                        {% if product.rating %}
-                                            {% show_rating product.rating %}
-                                        {% endif %}
+
+                                        {% show_rating id=product.id %}
 
                                         <h5 class="price">
 
@@ -325,17 +336,15 @@
                                                     id="cart-btn-{{ product.id }}"
                                                     data-url="{% url 'add_to_cart' %}"
                                                     data-remove-url="{% url 'remove_from_cart' %}"
-                                                    data-product-id="{{ product.id }}">
+                                                    data-product-id="{{ product.id }}"
+                                                    data-quantity="1"
+                                            >
                                                 Add
                                                 <span class="add-icon bg-light-gray">
                                                     <i class="fa-solid fa-plus"></i>
                                                 </span>
                                             </button>
                                         </div>
-
-
-
-
 
 
 
