--- a/templates/frontend/partials/rating_stars.html
+++ b/templates/frontend/partials/rating_stars.html
@@ -10,5 +10,7 @@
             <li><i data-feather="star"></i></li>
         {% endfor %}
     </ul>
+    {% if show_count %}
     <span>{{ total_reviews }} review{{ total_reviews|pluralize }}</span>
+    {% endif %}
 </div>
