--- a/templates/frontend/wishlist.html
+++ b/templates/frontend/wishlist.html
@@ -1,7 +1,7 @@
-
 {% extends "./partials/base.html" %}
 {% load static %}
-
+{% load currency_filters %}
+{% load rating_tags dict_extras %}
 {% block content %}
 
     <!-- Wishlist Section Start -->
@@ -9,60 +9,68 @@
         <div class="container-fluid-lg">
             <div class="row g-sm-3 g-2">
 
-                {% for product in wishlist %}
+                {% for product in wishlist_items %}
                 <div class="col-xxl-2 col-lg-3 col-md-4 col-6 product-box-contain">
                     <div class="product-box-3 h-100">
                         <div class="product-header">
                             <div class="product-image">
-                                <a href="product-left-thumbnail.html">
-                                    <img src="../assets/images/cake/product/2.png" class="img-fluid blur-up lazyload"
-                                        alt="">
+                                <a href="{% url 'product-detail' product.slug %}">
+                                     <img src="{{product.first_media.url}}"
+                                          class="img-fluid blur-up lazyload" alt="{{product.name}}">
                                 </a>
 
                                 <div class="product-header-top">
-                                    <button class="btn wishlist-button close_button">
+                                    <a href="javascript:void(0)" class="btn wishlist-button in-wishlist close_button"
+                                       data-url="{% url 'add-remove-from-wishlist' %}"
+                                       data-product-id="{{ product.product_id }}"
+                                    >
                                         <i data-feather="x"></i>
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="product-footer">
                             <div class="product-detail">
-                                <span class="span-name">Vegetable</span>
-                                <a href="product-left-thumbnail.html">
-                                    <h5 class="name">Fresh Bread and Pastry Flour 200 g</h5>
+                                <span class="span-name">{{product.category}}</span>
+                                <a href="{% url 'product-detail' product.slug %}">
+                                    <h5 class="name">{{product.name}}</h5>
                                 </a>
-                                <h6 class="unit mt-1">250 ml</h6>
                                 <h5 class="price">
-                                    <span class="theme-color">$08.02</span>
-                                    <del>$15.15</del>
+
+                                    {% if product.percentage_discount %}
+                                    <span class="theme-color">
+                                        {{ product.discounted_price | naira }}
+                                    </span>
+                                    <del>{{ product.price | naira }}</del>
+                                    {% else %}
+                                    <span class="theme-color">
+                                        {{ product.price | naira }}
+                                    </span>
+                                    {% endif %}
                                 </h5>
 
-                                <div class="add-to-cart-box bg-white mt-2">
-                                    <button class="btn btn-add-cart addcart-button">Add
+                                <div class="add-to-cart-box bg-white">
+                                    <button class="btn btn-add-cart addcart-button"
+                                            id="cart-btn-{{ product.product_id }}"
+                                            data-url="{% url 'add_to_cart' %}"
+                                            data-remove-url="{% url 'remove_from_cart' %}"
+                                            data-product-id="{{ product.product_id }}"
+                                            data-quantity="1"
+                                    >
+                                        Add
                                         <span class="add-icon bg-light-gray">
                                             <i class="fa-solid fa-plus"></i>
                                         </span>
                                     </button>
-                                    <div class="cart_qty qty-box">
-                                        <div class="input-group bg-white">
-                                            <button type="button" class="qty-left-minus bg-gray" data-type="minus"
-                                                data-field="">
-                                                <i class="fa fa-minus"></i>
-                                            </button>
-                                            <input class="form-control input-number qty-input" type="text"
-                                                name="quantity" value="0">
-                                            <button type="button" class="qty-right-plus bg-gray" data-type="plus"
-                                                data-field="">
-                                                <i class="fa fa-plus"></i>
-                                            </button>
-                                        </div>
-                                    </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
+                {% empty %}
+
+                <h5>You have no items in your wishlist</h5>
 
                 {% endfor %}
 
