--- a/templates/frontend/partials/base.html
+++ b/templates/frontend/partials/base.html
@@ -227,7 +227,7 @@
                                     </li>
                                     <li class="right-side">
                                         <div class="onhover-dropdown header-badge">
-                                            <button type="button" class="btn p-0 position-relative header-wishlist">
+                                            <button onclick="location.href = '{% url 'cart' %}';" type="button" class="btn p-0 position-relative header-wishlist">
                                                 <i data-feather="shopping-cart"></i>
                                                 <span class="position-absolute top-0 start-100 translate-middle badge" id="cart-counter">
                                                     {{ cart|length }}
