--- a/templates/frontend/partials/base.html
+++ b/templates/frontend/partials/base.html
@@ -33,6 +33,9 @@
     <link href="https://cdn.jsdelivr.net/npm/iconly@latest/dist/iconly/css/iconly.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/iconly@latest/dist/iconly/iconly.min.js"></script>
 
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+
+
 
 </head>
 
