--- a/templates/frontend/partials/base.html
+++ b/templates/frontend/partials/base.html
@@ -256,7 +256,11 @@
 
                                                     <li class="product-box-contain">
                                                         <i></i>
+                                                        {% if user.user_type == "Vendor" %}
+                                                        <a href="{% url 'vendor-dashboard' %}">Dashboard</a>
+                                                        {% else %}
                                                         <a href="{% url 'dashboard' %}">Dashboard</a>
+                                                        {% endif %}
                                                     </li>
 
                                                     <li class="product-box-contain">
