--- a/templates/frontend/onboard-vendor.html
+++ b/templates/frontend/onboard-vendor.html
@@ -100,6 +100,8 @@
 
 
 <!-- Vendor Registration Form Start -->
+
+{% if not user.user_type == "Vendor" %}
 <section class="vendor-register section-b-space" id="vendor-register">
     <div class="container-fluid-lg">
         <div class="seller-title mb-4">
@@ -109,7 +111,11 @@
 
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <form class="vendor-form" method="POST">
+                <form class="vendor-form"
+                      x-data="{ submitting: false }"
+                      @submit="submitting = true"
+                      method="POST" enctype="multipart/form-data"
+                >
                     {% csrf_token %}
 
                     <div class="row g-3">
@@ -181,6 +187,8 @@
                             </select>
                         </div>
 
+                        <input type="hidden" name="bank_name" id="bank_name">
+
 
                         <div class="col-md-6">
                             <label for="account_number" class="form-label">Bank Account Number</label>
@@ -230,7 +238,12 @@
                         </div>
 
                         <div class="col-12 mt-4">
-                            <button type="submit" class="btn btn-animation w-100 justify-content-center text-center">Submit</button>
+                            <button type="submit" class="btn btn-animation w-100 justify-content-center text-center"
+                                :disabled="submitting"
+                                x-text="submitting ? 'Submitting...' : 'Submit'"
+                            >
+                                Submit
+                            </button>
                         </div>
 
                         <div class="col-12 text-center mt-3">
@@ -243,12 +256,27 @@
     </div>
 </section>
 <!-- Vendor Registration Form End -->
+{% else %}
+<section class="vendor-register section-b-space">
+    <div class="container-fluid-lg">
+        <div class="seller-title mb-4">
+            {% if user.vendor_profile == "Approved" %}
+            <h2>You are already registered as a Vendor</h2>
+            <p>Go to your <a href="{% url 'vendor-dashboard' %}">Vendor Dashboard</a></p>
+
+            {% else %}
+            <h2>Your vendor registration is being reviewed</h2>
+            {% endif %}
+        </div>
+    </div>
+</section>
+{% endif %}
 
 
 
 
 <script>
-    <script>
+
     function passwordForm() {
         return {
             fields: {
