--- a/templates/frontend/checkout.html
+++ b/templates/frontend/checkout.html
@@ -178,8 +178,8 @@
                         </ul>
                     </div>
 
-                    <button class="btn theme-bg-color text-white btn-md w-100 mt-4 fw-bold">
-                        Place Order
+                    <button type="submit" class="btn theme-bg-color text-white btn-md w-100 mt-4 fw-bold">
+                        Confirm Details
                     </button>
 
 
@@ -190,4 +190,9 @@
     </div>
 </section>
 <!-- Checkout section End -->
+
+
+
+
+
 {% endblock content %}
