--- a/templates/frontend/partials/base.html
+++ b/templates/frontend/partials/base.html
@@ -541,6 +541,9 @@
     <script src="{% static 'frontend/assets/js/wishlist.js' %}"></script>
     <script src="{% static 'frontend/assets/js/bank.js' %}"></script>
 
+
+    <script src="{% static 'frontend/assets/js/paystack.js' %}"></script>
+
     <script>
         const csrfToken = '{{ csrf_token }}';
     </script>
